# Personality_Detector

./: Data_prepration.ipynb  README.md  cleaned_personality_dataset.csv  main.py  model.ipynb  personality_model.pkl  pyproject.toml  requirments.txt
